# ok

./: .clang-format  CMakeLists.txt  README.md  ok.cpp
